<resources>
    <string name="app_name">勤牛TMS</string>
    <string name="title_home">物流首页</string>
    <string name="title_dashboard">老板键</string>
    <string name="title_notifications">个人中心</string>
    <string name="update_pwd">修改密码</string>
    <string name="bluetooth_setting">蓝牙设置</string>
    <string name="app_title">勤牛物流平台TMS</string>
    <string name="city">城市</string>
    <string name="lines_choose">到站选择</string>
    <string name="mine_setting">个人中心</string>
    <string name="enter_consigneeName">请输入收货人姓名</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="consignee">收货人</string>
    <string name="consignee_name">请填写收货人姓名</string>
    <string name="consignee_phone">请填写收货人电话</string>
    <string name="consigner">发货人</string>
    <string name="consigner_name">请填写发货人姓名</string>
    <string name="consigner_phone">请填写发货人电话</string>
    <string name="consigner_namePhone">请输入发货人姓名或电话</string>
    <string name="consignee_namePhone">请输入收货人姓名或电话</string>
    <string name="boss_config">我是老板</string>
    <string name="goods">货物</string>
    <string name="entry_goodName">请填写货物名称</string>
    <string name="packages">包装</string>
    <string name="common">常用</string>
    <string name="freight">运费</string>
    <string name="goodsCount">件数</string>
    <string name="RMB">元</string>
    <string name="COUNT">件</string>
    <string name="fee_advance">垫付款</string>
    <string name="fee_collection">代收款</string>
    <string name="choose_fee">选择</string>
    <string name="other_fee">其它费用</string>
    <string name="fee_total">运费合计</string>
    <string name="method_pay">付款方式</string>
    <string name="method_getGoods">提货方式</string>
    <string name="back_recipet">回单</string>
    <string name="print_count">打印</string>
    <string name="shit_fen">份</string>
    <string name="quit">退出</string>
    <string name="save_billing">保存并打印</string>
    <string name="enter_phoneNumber">请输入手机号</string>
    <string name="enter_pwd">请输入密码</string>
    <string name="condition">筛选</string>
    <string name="init_station">发站</string>
    <string name="termi_station">到站</string>
    <string name="time_choose">时间选择</string>
    <string name="billing_number">运单号</string>
    <string name="search_billingNumber">请输入运单号</string>
    <string name="artical_number">货运号</string>
    <string name="search_artical_number">输入货运号</string>
    <string name="search_fee">费用项目</string>
    <string name="search_state">运单状态</string>
    <string name="search_payMethod">付款方式</string>
    <string name="clear">清空</string>
    <string name="search">搜索</string>
    <string name="addGoods">+添加货物</string>
    <string name="choose_pack">包装选择</string>
    <string name="choose_good">货物选择</string>
    <string name="declaration">请输入您想要添加的申明，最多一百字,不需要打序号!</string>
    <string name="edit_declar">添加声明</string>
    <string name="edit_dec">编辑声明</string>
    <string name="save">保存</string>
    <string name="ensure_edit">确定修改</string>
    <string name="add_declar">添加声明</string>
    <string name="null_info_declar">您没有填写任何声明信息</string>
    <string name="cars_information">车辆信息</string>
    <string name="car_plateNumber">车牌号</string>
    <string name="enter_carPlateNumber">请填写车牌号</string>
    <string name="cars_edit">车辆编辑</string>
    <string name="entry_goods_name">请输入货物名字</string>
    <string name="no_cancel">取消</string>
    <string name="yes_do">确定</string>
    <string name="error_deleteGood">删除货物失败</string>
    <string name="add_goodError">添加货物失败</string>
    <string name="get_goodsError">获取所有货物失败</string>
    <string name="ask_deletegoods">您确定要删除这个货物吗</string>
    <string name="loading">正在请求</string>
    <string name="update">正在提交</string>
    <string name="trans">中转</string>
    <string name="redo">重填</string>
    <string name="value_declar">声明价值</string>
    <string name="value_fee">保价费</string>
    <string name="deli_fee">送货费</string>
    <string name="receice_fee">接货费</string>
    <string name="handle_fee">装卸费</string>
    <string name="liftFork_fee">叉吊费</string>
    <string name="package_fee">包装费</string>
    <string name="upstair_fee">上楼费</string>
    <string name="cash_back">回扣</string>
    <string name="own_back">欠返</string>
    <string name="loadCar">装车</string>
    <string name="cash_payment">现付</string>
    <string name="arrive_payment">到付</string>
    <string name="back_payment">回付</string>
    <string name="month_payment">月结</string>
    <string name="collect_payment">货款扣</string>
    <string name="self_get">自提</string>
    <string name="deli_get">送货</string>
    <string name="load_onShot">一键装车</string>
    <string name="entry_oldPwd">请输入旧密码</string>
    <string name="entry_newPwd">请输入新密码</string>
    <string name="entry_confirmPwd">请再次确认新密码</string>
    <string name="oldPwd">旧密码</string>
    <string name="newPwd">新密码</string>
    <string name="confirm">再次确认</string>
    <string name="search_bluetooth">搜索蓝牙</string>
    <string name="muti_pay">多笔付</string>
    <string name="help_please">内部错误，请联系客服</string>
    <string name="quit_billing">退出将不会保存此单信息,您确定要退出吗？</string>
    <string name="destination">目的地 </string>
    <string name="get_paymethod">请重新选择您的支付方式</string>
    <string name="not_right_mutiAndTotal">多笔付总金额和运费合计不符，请检查重填</string>
    <string name="get_Quantity">请务必填写件数</string>
    <string name="get_Freight">请务必填写费用</string>
    <string name="get_Destination">\'途径的运送方式\'必须填写目的地</string>
    <string name="login_fail">用户名或密码错误</string>
    <string name="boss_pointAndMan">网点/人员管理</string>
    <string name="add_cooper">+添加合作伙伴</string>
    <string name="cooperate">合作伙伴</string>
    <string name="entry_phone">电话:</string>
    <string name="manNumber">人员:</string>
    <string name="manConfig">人员管理</string>
    <string name="addPoint">+添加网点</string>
    <string name="add_man">+添加人员</string>
    <string name="point_man">网点人员</string>
    <string name="ensure_deleteman">您确定要删除这个人员吗</string>
    <string name="man_edit">人员编辑</string>
    <string name="nameNotNull">姓名不能为空</string>
    <string name="phoneNotNull">电话不能为空</string>
    <string name="remote_succ">操作成功</string>
    <string name="errorNetWork">操作失败，请检查网络</string>
    <string name="cell">查货电话</string>
    <string name="address">网点地址</string>
    <string name="point_edit">网点编辑</string>
    <string name="pointNameNotNull">网点名字不能为空</string>
    <string name="pointOwnerNotNull">人员名字不能为空</string>
    <string name="point_detail_error">获取网点详情失败,请检查网络</string>
    <string name="point_edit_error">编辑网点失败</string>
    <string name="delete_man_error">删除网点人员失败，请重试</string>
    <string name="get_mans_error">获取网点人员失败，请重试</string>
    <string name="stop_useing">停用</string>
    <string name="state">状态</string>
    <string name="entry_companyName">请输入公司名称</string>
    <string name="search_company">搜索合作公司</string>
    <string name="entry_company_name">请填写想要搜索的公司名字</string>
    <string name="add_point_cooper">添加合作伙伴</string>
    <string name="add">添加</string>
    <string name="ensure_add_cooper">您确定要添加该点为合作伙伴吗?</string>
    <string name="myBillSear">我的运单查询</string>
    <string name="getTermialError">获取到站失败，请重新请求</string>
    <string name="jb_printer_error">佳博打印机初始化失败</string>
    <string name="jb_printer_succ">佳博打印机初始化完成</string>
    <string name="xy_printer_error">芯烨打印机初始化失败</string>
    <string name="xy_printer_succ">芯烨打印机初始化完成</string>
    <string name="print_code_error">打印机指令传输失败</string>
    <string name="sear_bt_device">点击开始搜索蓝牙设备</string>
    <string name="bt_setting">蓝牙设置</string>
    <string name="searching">正在搜索</string>
    <string name="forbiddeng_bt">您拒绝了蓝牙权限</string>
    <string name="error_disconnect_port">断开端口异常</string>
    <string name="point_get_error">获取网点失败，请重新请求</string>
    <string name="search_error">查询失败，请检查网络</string>
    <string name="username">用户名</string>
    <string name="pointname">网点</string>
    <string name="bill_succee">开票成功</string>
    <string name="ensure_loginOut">您确定要退出登录吗？</string>
    <string name="invoice_time">开票时间</string>
    <string name="show_detail"><![CDATA[查看详情或打印 >]]></string>
    <string name="all">全部</string>
    <string name="cancel_billing">作废</string>
    <string name="cancel_billing_succ">作废运单成功</string>
    <string name="cancel_bill_error">作废运单失败，请重试</string>
    <string name="update_billing">修改运单</string>
    <string name="entry_plateNumber">请填写车牌号</string>
    <string name="chooseCar">车辆选择</string>
    <string name="driver_name">司机姓名</string>
    <string name="entry_driverName">请填写司机姓名</string>
    <string name="driver_phone">司机电话</string>
    <string name="entry_driverPhone">请填写司机电话</string>
    <string name="ensure_loadCar">确定装车</string>
    <string name="ensure_load">确认装车</string>
    <string name="plateNumberNotNull">车票号不能为空</string>
    <string name="delete_car_error">删除车辆信息失败，请重试</string>
    <string name="delete_car_succ">删除车辆信息成功</string>
    <string name="update_car_succ">编辑车辆信息成功</string>
    <string name="update_car_error">编辑车辆信息失败</string>
    <string name="netWork_error">网络故障</string>
    <string name="ask_delete_car">您确定要删除该车辆信息吗?</string>
    <string name="choose_all">全选</string>
    <string name="good_arrival">到货</string>
    <string name="ensure_arrival">确认到货</string>
    <string name="good_sign">签收</string>
    <string name="ensure_sign">确认签收</string>
    <string name="terminal_is">到站: </string>
    <string name="load_succ">装车成功</string>
    <string name="load_error">装车失败</string>
    <string name="ai_hint">智能提示</string>
    <string name="entry_search_info">请输入搜索信息</string>
    <string name="no_answer_for">没有搜索到任何相关信息，请重试</string>
    <string name="send">发</string>
    <string name="receive">收</string>
    <string name="ai_delete_hint">删除后，这条数据将不再提示</string>
    <string name="can_not_xy">无法连接打印机</string>
    <string name="statisc_error">票据统计失败，请稍后重试</string>
    <string name="no_chooose_bill">您没有选择任何票据装车</string>
    <string name="add_cooper_succ">添加合作伙伴成功</string>
    <string name="add_cooper_error">添加合作伙伴失败，请重试</string>
    <string name="get_cooper_error">查询公司网点失败，请重试</string>
    <string name="company">公司</string>
    <string name="网点">网点</string>
    <string name="point_on">启用</string>
    <string name="point_off">停用</string>
    <string name="arrvial_ensure_error">到货确认失败，请重试</string>
    <string name="sign_ensure_error">签收确认失败，请重试</string>
    <string name="no_bill_for_arrvial">请任择运单</string>
    <string name="terminal_error">获取发站到站失败，请检查网络</string>
    <string name="can_choose_time">点击选择时间</string>
    <string name="loading_error">加载失败</string>
    <string name="advance">垫付款</string>
    <string name="bill_search_error">查询运单失败，或没有数据</string>
    <string name="update_bill_succ">修改票据成功</string>
    <string name="update_bill_error">修改票据失败，请重试</string>
    <string name="quit_update_bill">退出修改将不会保存信息</string>
    <string name="mutiNotEqualsAll">您的付款总计和运费合计不同，请修改</string>
    <string name="declaration_error">声明加载异常，请查看自己的声明详情，否则回影响票据声明显示</string>
    <string name="superSearch">运单查询</string>
    <string name="print_bill">打印运单</string>
    <string name="print_sign">签收打印</string>
    <string name="sum">合计</string>
    <string name="no_data">没有搜索到任何数据</string>
    <string name="load_history">装车历史</string>
    <string name="print_load">打印清单</string>
    <string name="xy_not_collected">芯烨打印机未连接</string>
    <string name="error_state">运单状态异常不能打印</string>
    <string name="add_error">添加异常</string>
    <string name="error_edit_succ">编辑异常成功</string>
    <string name="error_edit_error">编辑异常失败，请重试</string>
    <string name="ask_ensure_error">您确定要添加此单为异常吗?</string>
    <string name="deal_error_error">处理异常运单失败，请重试</string>
    <string name="deal_error_succ">处理异常运单成功</string>
    <string name="error_remote">异常管理</string>
    <string name="addError_succ">添加异常成功</string>
    <string name="addError_error">添加异常失败</string>
    <string name="change_rate">费率修改</string>
    <string name="rate_des">运输保价率</string>
    <string name="rate">费率</string>
    <string name="trans_list">中转列表</string>
    <string name="time">时间: </string>
    <string name="remark">备注 : </string>
</resources>