<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.infinity.jerry.yyd_tms.ui.customview.ZTitlebar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.infinity.jerry.yyd_tms.ui.customview.ZTitlebar>

    <LinearLayout style="@style/drawBill2_linear">

        <TextView
            style="@style/drawBill2_tvStyle"
            android:text="@string/car_plateNumber" />

        <EditText
            android:id="@+id/edPlateNumber"
            style="@style/drawBill2_editText"
            android:hint="@string/enter_carPlateNumber" />
    </LinearLayout>

    <LinearLayout style="@style/drawBill2_linear">

        <TextView
            style="@style/drawBill2_tvStyle"
            android:text="@string/driver_name" />

        <EditText
            android:id="@+id/edDriverName"
            style="@style/drawBill2_editText"
            android:hint="@string/entry_driverName" />
    </LinearLayout>

    <LinearLayout style="@style/drawBill2_linear">

        <TextView
            style="@style/drawBill2_tvStyle"
            android:text="@string/driver_phone" />

        <EditText
            android:inputType="number"
            android:id="@+id/edDriverPhone"
            style="@style/drawBill2_editText"
            android:hint="@string/entry_driverPhone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/btEnsureCars"
        style="@style/bottom_button"
        android:text="@string/yes_do" />


</LinearLayout>
