<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.infinity.jerry.yyd_tms.ui.customview.ZTitlebar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.infinity.jerry.yyd_tms.ui.customview.ZTitlebar>

    <LinearLayout
        style="@style/drawBill2_linear"
        android:layout_marginTop="@dimen/normal_dis">

        <TextView
            style="@style/drawBill2_tvStyle"
            android:text="@string/oldPwd" />

        <EditText
            android:inputType="textPassword"
            style="@style/drawBill2_editText"
            android:id="@+id/edOldPwd"
            android:hint="@string/entry_oldPwd" />

    </LinearLayout>

    <LinearLayout
        style="@style/drawBill2_linear"
        android:layout_marginTop="@dimen/normal_dis">


        <TextView
            style="@style/drawBill2_tvStyle"
            android:text="@string/newPwd" />

        <EditText
            android:inputType="textPassword"
            style="@style/drawBill2_editText"
            android:id="@+id/edNewPwd"
            android:hint="@string/entry_newPwd" />

    </LinearLayout>


    <LinearLayout
        style="@style/drawBill2_linear"
        android:layout_marginTop="@dimen/normal_dis">


        <TextView
            style="@style/drawBill2_tvStyle"
            android:text="@string/confirm" />

        <EditText
            android:inputType="textPassword"
            style="@style/drawBill2_editText"
            android:id="@+id/edConfirmPwd"
            android:hint="@string/entry_confirmPwd" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvEnsure"
        style="@style/bottom_button"
        android:text="@string/ensure_edit" />

</LinearLayout>
