<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.infinity.jerry.yyd_tms.ui.customview.ZTitlebar
        android:id="@id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.infinity.jerry.yyd_tms.ui.customview.ZTitlebar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvBillInfo"
                style="@style/blackTextView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/level3_gray_light2"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/normal_dis"
                android:text="票据信息" />

            <com.infinity.jerry.yyd_tms.ui.customview.ZMesuredListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:background="@color/level4_gray_light4"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/blackTextView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/level3_gray_light2"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/normal_dis"
                android:text="车辆信息" />

            <LinearLayout style="@style/drawBill2_linear">

                <TextView
                    style="@style/drawBill2_tvStyle"
                    android:paddingLeft="@dimen/normal_dis"
                    android:text="@string/car_plateNumber" />

                <EditText
                    android:id="@+id/edPlateNumber"
                    style="@style/drawBill2_editText"
                    android:hint="@string/entry_plateNumber" />

                <TextView
                    android:id="@+id/tvCarChoose"
                    style="@style/drawBill2_tvButton"
                    android:layout_width="100dp"
                    android:text="@string/chooseCar" />

            </LinearLayout>

            <LinearLayout style="@style/drawBill2_linear">

                <TextView
                    style="@style/drawBill2_tvStyle"
                    android:paddingLeft="@dimen/normal_dis"
                    android:text="@string/driver_name" />

                <EditText
                    android:id="@+id/edDriverName"
                    style="@style/drawBill2_editText"
                    android:hint="@string/entry_driverName" />

            </LinearLayout>

            <LinearLayout style="@style/drawBill2_linear">

                <TextView
                    style="@style/drawBill2_tvStyle"
                    android:paddingLeft="@dimen/normal_dis"
                    android:text="@string/driver_phone" />

                <EditText
                    android:id="@+id/edDriverPhone"
                    style="@style/drawBill2_editText"
                    android:hint="@string/entry_driverPhone" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <TextView
        style="@style/bottom_button"
        android:text="@string/ensure_loadCar"
        android:id="@+id/tvEnsureLoad" />


</LinearLayout>
