<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.infinity.jerry.yyd_tms.ui.customview.ZTitlebar
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.infinity.jerry.yyd_tms.ui.customview.ZTitlebar>

        <com.infinity.jerry.yyd_tms.ui.customview.Z_SwipeListView
            android:id="@+id/swipeListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </com.infinity.jerry.yyd_tms.ui.customview.Z_SwipeListView>

        <LinearLayout
            android:id="@+id/llRemote"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionBar_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBatchPrint"
                style="@style/bottom_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/actionBar_height"
                android:layout_weight="1"
                android:text="点击选中批量打印" />

            <ImageView
                android:id="@+id/imagBle"
                android:layout_width="100dp"
                android:layout_height="@dimen/actionBar_height"
                android:scaleType="center"
                android:src="@mipmap/tms_icon_bluetooth_false" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/coverFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#444444">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/condition"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="60dp"
        android:background="@color/color_white"
        android:clickable="true"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/tvBillSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:text="筛选条件" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/level3_gray_light2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/tvBillSearch"
                        android:layout_marginLeft="@dimen/normal_dis"
                        android:text="@string/init_station" />

                    <Spinner
                        android:id="@+id/spInit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        style="@style/tvBillSearch"
                        android:layout_marginLeft="@dimen/normal_dis"
                        android:text="@string/termi_station" />

                    <Spinner
                        android:id="@+id/spTermi"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/timeChoose"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/billSearchLinearHeight"
                    android:background="@color/level3_gray_light2"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/tvBillSearch"
                        android:layout_marginLeft="@dimen/normal_dis"
                        android:text="@string/time_choose" />

                    <TextView
                        android:id="@+id/tvTime"
                        style="@style/tvBillSearch"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="@dimen/normal_dis"
                        android:drawableRight="@mipmap/icon_right_arrow"
                        android:paddingRight="@dimen/normal_dis"
                        android:text="@string/can_choose_time"
                        android:textColor="@color/level1_gray_dark" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/middle_dis"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/tvBillSearch"
                        android:layout_width="60dp"
                        android:layout_marginLeft="@dimen/middle_dis"
                        android:text="@string/consigner" />

                    <EditText
                        android:id="@+id/edConRRName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/middle_dis"
                        android:layout_marginRight="@dimen/middle_dis"
                        android:background="@android:drawable/edit_text"
                        android:hint="@string/consigner_name"
                        android:textSize="@dimen/textSize_3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/middle_dis"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/tvBillSearch"
                        android:layout_width="60dp"
                        android:layout_marginLeft="@dimen/middle_dis"
                        android:text="@string/phone" />

                    <EditText
                        android:id="@+id/edConRRPhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/middle_dis"
                        android:layout_marginRight="@dimen/middle_dis"
                        android:background="@android:drawable/edit_text"
                        android:hint="@string/consigner_phone"
                        android:inputType="phone"
                        android:textSize="@dimen/textSize_3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/middle_dis"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/tvBillSearch"
                        android:layout_width="60dp"
                        android:layout_marginLeft="@dimen/middle_dis"
                        android:text="@string/consignee" />

                    <EditText
                        android:id="@+id/edConEEName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/middle_dis"
                        android:layout_marginRight="@dimen/middle_dis"
                        android:background="@android:drawable/edit_text"
                        android:hint="@string/consignee_name"
                        android:textSize="@dimen/textSize_3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/middle_dis"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/tvBillSearch"
                        android:layout_width="60dp"
                        android:layout_marginLeft="@dimen/middle_dis"
                        android:text="@string/phone" />

                    <EditText
                        android:id="@+id/edConEEPhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/middle_dis"
                        android:layout_marginRight="@dimen/middle_dis"
                        android:background="@android:drawable/edit_text"
                        android:hint="@string/consignee_phone"
                        android:inputType="phone"
                        android:textSize="@dimen/textSize_3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/middle_dis"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/tvBillSearch"
                        android:layout_width="60dp"
                        android:layout_marginLeft="@dimen/middle_dis"
                        android:text="货号" />

                    <EditText
                        android:id="@+id/edBillNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/middle_dis"
                        android:layout_marginRight="@dimen/middle_dis"
                        android:background="@android:drawable/edit_text"
                        android:hint="@string/search_billingNumber"
                        android:inputType="number"
                        android:textSize="@dimen/textSize_3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/middle_dis"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/tvBillSearch"
                        android:layout_width="60dp"
                        android:layout_marginLeft="@dimen/middle_dis"
                        android:text="自录货号" />

                    <EditText
                        android:id="@+id/edSelfBillNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/middle_dis"
                        android:layout_marginRight="@dimen/middle_dis"
                        android:background="@android:drawable/edit_text"
                        android:hint="请输入自录货号"
                        android:inputType="number"
                        android:textSize="@dimen/textSize_3" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/level3_gray_light2"
                android:gravity="center"
                android:text="@string/clear"
                android:textColor="@color/color_black"
                android:textSize="@dimen/textSize_3" />

            <TextView
                android:id="@+id/tvSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_orange"
                android:gravity="center"
                android:text="@string/search"
                android:textColor="@color/color_white"
                android:textSize="@dimen/textSize_3" />

            <TextView
                android:id="@+id/tvSign"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="去签收"
                android:textColor="@color/color_white"
                android:textSize="@dimen/textSize_3"
                android:visibility="gone" />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
